--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@
 body {
     font-family: var(--content-font);
     margin: 0 auto;
-    width: 70%;
+    width: 75%;
 }
 
     /* Header Section */
@@ -50,14 +50,15 @@ body {
 .cards-column {
     float: left;
     width: 33.33%;
-    padding: 20px 5px;
+    padding: 20px 15px;
     height: 300px; /* Should be removed. Only for demonstration */
 }
 
 .card-item {
     height: 100px; /* Should be removed. Only for demonstration */
-    margin: 20px 0 20px 0;
+    margin: 20px 0 50px 0;
     background-color: var(--card-bg-primary);
+    box-shadow: 5px 10px 18px #888888;
 }
 
 /* Clearfix Float Rule */
