--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,11 @@ body {
     width: 75%;
 }
 
+img {
+    height: 100px;
+    float: left;
+}
+
     /* Header Section */
     header {
         margin: 50px 0 20px 0;
