--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ img {
 .cards-column {
     float: left;
     width: 33.33%;
-    padding: 20px 15px;
+    padding: 20px;
 }
 
 .card-item {
@@ -74,7 +74,7 @@ img {
 
 .card-profession-info {
     display: inline-block;
-    padding-top: 6px;
+    padding-top: 8px;
 }
 
 .mail-link {
@@ -82,7 +82,7 @@ img {
     text-decoration: none;
     font-size: 0.9rem;
     display: block;
-    padding-top: 6px;
+    padding-top: 8px;
 }
 
 /* Little Decoration Mail Link */
