--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ body {
     font-family: var(--content-font);
     margin: 0 auto;
     max-width: 1200px;
-    /* Changed With with max width forflexing containers */
+    /* Changed Width with max width for flexing containers */
 }
 
 img {
